2.9305: Fri Apr 25 2014
   - I never noticed http://search.cpan.org/perldoc?Math%3A%3ABusiness%3A%3AStochastic
     and accidentally tried to steal his FCFS namespace.  Woops.  Moved to Math::Business::SM::Stochastic.
     Fail.

2.9303: Mon Oct 21 2013
   - lazy test in t/13: https://rt.cpan.org/Ticket/Display.html?id=89645

2.9301: Fri Oct 04 2013
   - added an undocumented (experimental) tag feature,
     descriptors for the models, mainly for graphing purposes.

2.9300_1: Thu Oct 03 2013
   - added ConnorRSI - Still lacks docs and tests
   - added a Bayesian example to the examples directory
   - added a trading strategy example

2.9200: Sun Sep 22 2013
   - added Stochastics

2.9100: Sat Sep 21 2013
   - added a new index (CCI)
   - added an example program showing loading a database with
     MACD and RSI from Forex M1 data.

2.9020: Thu Nov 29 2012
   - Erik Axelkrans discovered a bad bug in the stddev
     computation of bollinger bands.  Thanks!!

2.9015: Sat Jun 09 2012
   - Alan Wee feels Bollinger Bands should support floating point
     arguments.  Probably other modules should do that too...

2.9014: Fri Sep 17 2010
   - fixed a 0/0 error.... clearly since the DI is 0, the DX is
     also 0, even though it's indeterminant form.
   - relicensed as Perl artistic

2.9013: Tue Mar 31 06:58:51 EDT 2009
   - I just noticed that the reason my versions are screwed up is
     that at some point (circa Jul12 2008) I went down in version
     -- foolishly forgetting about floating point versions. Grrz.

2.13: Mon Mar 30 09:54:57 EDT 2009
   - I changed the way the tests worked.  The rand() calls in the
     tests were making the tests fail fairly rarely, but also
     randomly.  I'm hopeful that the rare circumstances where the
     assumptions in the tests fail ... won't happen at all with
     pre-generated data.

2.111: Fri Mar 27 18:35:35 EDT 2009
   - added chorny code to the makefile that makes the repo show
     on cpan.
