@@ -5,7 +5,13 @@ use ExtUtils::MakeMaker;
 WriteMakefile(
     NAME         => 'Math::Business',
     DISTNAME     => 'stockmonkey',
-    PREREQ_PM    => { constant => 1.05, 'Math::Business::Stochastic' },
+    AUTHOR       => 'Paul Miller <jettero@cpan.org>',
+    PREREQ_PM    => { constant => 1.05,
+
+        # Not from StockMonkey:
+        'Math::Business::Stochastic' => 0
+
+    },
     VERSION_FROM => 'lib/Math/Business/StockMonkey.pm',
 
     ($ExtUtils::MakeMaker::VERSION ge '6.48'? 
