@@ -1,6 +1,7 @@
 2.9305: Fri Apr 25 2014
-   - I never noticed http://search.cpan.org/perldoc?Math%3A%3ABusiness%3A%3AStochastic
-     and accidentally tried to steal his FCFS namespace.  Woops.  Moved to Math::Business::SM::Stochastic.
+   - I never noticed http://search.cpan.org/perldoc?Math::Business::Stochastic and
+     accidentally tried to steal his FCFS namespace.  Woops.  Moved to
+     Math::Business::SM::Stochastic.
      Fail.
 
 2.9303: Mon Oct 21 2013
